<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quizactivities.CreateQuizActivity">

    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:id="@+id/scrollView"
        android:layout_height="590dp">
        <LinearLayout
            android:id="@+id/question_create_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/UI_enter_module_name"
                    tools:layout_conversion_absoluteHeight="19dp"
                    tools:layout_conversion_absoluteWidth="200dp" />

                <Spinner
                    android:id="@+id/module_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout_conversion_absoluteHeight="0dp"
                    tools:layout_conversion_absoluteWidth="48dp" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/add_question_button"
                android:textAllCaps="false"
                android:text="@string/UI_add_question" />
        </LinearLayout>
    </ScrollView>

    <Button
        app:layout_constraintTop_toBottomOf="@id/scrollView"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/UI_finish"
        android:textAllCaps="false"
        android:id="@+id/quiz_create_finish" />

</androidx.constraintlayout.widget.ConstraintLayout>