...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:visibility="visible" />

        <Button
            android:id="@+id/answer_input_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/UI_create_answer"
            android:textAllCaps="true" />
    </LinearLayout>
...
